--- a/epub.css
+++ b/epub.css
@@ -42,11 +42,36 @@ nav#toc ol,
 nav#landmarks ol { padding: 0; margin-left: 1em; }
 nav#toc ol li,
 nav#landmarks ol li { list-style-type: none; margin: 0; padding: 0; }
-a.footnote-ref { vertical-align: super; }
+a.footnote-ref {
+    position: relative;
+    vertical-align: super;
+    font-size: 0.83em;
+}
+
 em, em em em, em em em em em { font-style: italic;}
 em em, em em em em { font-style: normal; }
+
 code{ white-space: pre-wrap; }
+
 span.smallcaps{ font-variant: small-caps; }
+
 span.underline{ text-decoration: underline; }
+
 q { quotes: "“" "”" "‘" "’"; }
+
 div.column{ display: inline-block; vertical-align: top; width: 50%; }
+
+blockquote {
+    font-family: 'KaiTi', 'KaiTi_GB2312', 'STKaiti', 'DejaVu Sans Mono';
+}
+
+.flushleft{
+    text-align: left!important;
+}
+.flushright{
+    text-align: right!important;
+}
+
+.center{
+    text-align: center !important;
+}
